--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,18 @@
-/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
+/*! HTML5 Boilerplate v7.1.0 | MIT License | https://html5boilerplate.com/ */
 
+/* main.css 1.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+ 
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
+   html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
@@ -93,9 +95,89 @@ textarea {
     padding: 0.2em 0;
 }
 
-/* ==========================================================================
+
+
+
+ /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+  body, main{
+    display: grid;
+    grid-column: 1 / 4;
+    grid-template-columns: 20% 60% 20%;
+  }
+
+  *{
+    font-family: arial;
+  }
+
+  /*header*/
+  .nav{
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+
+  }
+  .navigation{
+    display: flex;
+    flex-direction: row;
+    grid-column: 2 / 3;
+    justify-content: space-between;
+    color: white;
+    padding: 20px 0px;
+  }
+
+  .navigation a{
+    display: inline;
+    margin: auto 0;
+    color: white;
+    text-decoration: none;
+  }
+
+  .navigation a:hover{
+    border-bottom: 1px solid orange;
+  }
+
+  .navigation img{
+    width: auto;
+    height: 100%;
+    margin: 10px 0px;
+  }
+
+  /*main*/
+
+  .main-content{
+    background-image: url(../img/stadium-background.jpg);
+    grid-column: 1 / 4;
+    background-size: cover;
+  }
+
+  .title h2, h1{
+    color: white;
+    text-align: center;
+  }
+  .title{
+    margin: 200px 0;
+  }
+
+  .bar{
+    grid-column: 1 / 4;
+    width: 100%;
+    height: 2px;
+    background-color: grey;
+  }
+  button{
+  width: 130px;
+  height: 45px;
+  background-color: #E15A3A;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-family: arial;
+  font-size: 20px;
+  display: block;
+  margin: 0 auto;
+}
 
 
 
@@ -111,9 +193,7 @@ textarea {
 
 
 
-
-
-/* ==========================================================================
+ /* ==========================================================================
    Helper classes
    ========================================================================== */
 
@@ -121,85 +201,86 @@ textarea {
  * Hide visually and from screen readers
  */
 
-.hidden {
-    display: none !important;
+ .hidden {
+  display: none !important;
 }
 
 /*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
+* Hide only visually, but have it available for screen readers:
+* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+*
+* 1. For long content, line feeds are not interpreted as spaces and small width
+*    causes content to wrap 1 word per line:
+*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+*/
 
 .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap; /* 1 */
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; /* 1 */
 }
 
 /*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
+* Extends the .visuallyhidden class to allow the element
+* to be focusable when navigated to via the keyboard:
+* https://www.drupal.org/node/897638
+*/
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-    white-space: inherit;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+  white-space: inherit;
 }
 
 /*
- * Hide visually and from screen readers, but maintain layout
- */
+* Hide visually and from screen readers, but maintain layout
+*/
 
 .invisible {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 /*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
+* Clearfix: contain floats
+*
+* For modern browsers
+* 1. The space content is one way to avoid an Opera bug when the
+*    `contenteditable` attribute is included anywhere else in the document.
+*    Otherwise it causes space to appear at the top and bottom of elements
+*    that receive the `clearfix` class.
+* 2. The use of `table` rather than `block` is only necessary if using
+*    `:before` to contain the top-margins of child elements.
+*/
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+  content: " "; /* 1 */
+  display: table; /* 2 */
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
+ 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+   @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
 
@@ -210,13 +291,14 @@ textarea {
     /* Style adjustments for high resolution devices */
 }
 
+ 
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 
-@media print {
+   @media print {
     *,
     *:before,
     *:after {
@@ -285,3 +367,5 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+
