--- a/api/css/main.css
+++ b/api/css/main.css
@@ -205,7 +205,7 @@ textarea {
   justify-content: center;
   background-color: white;
   padding: 40px 10px;
-  width: 290px;
+  width: auto;
   text-align: center;
 }
 
