--- a/api/css/main.css
+++ b/api/css/main.css
@@ -194,7 +194,7 @@ textarea {
   justify-content: space-around;
   flex-wrap: wrap;
   grid-column: 1 / 4;
-  padding: 40px 0px;
+  padding: 80px 0px;
   background-color: #F9F9F9;
 }
 
@@ -231,6 +231,21 @@ textarea {
 
 }
 
+/*user page*/
+
+.main-user{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    grid-column: 2 / 3;
+    margin: 40px 0px;
+}
+
+.create-team-button{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 
 
 
