--- a/website/css/main.css
+++ b/website/css/main.css
@@ -295,13 +295,38 @@ textarea {
   max-width: 960px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .main {
   display: block;
 }
 
+/*Tables*/
 
+.info-table table{
+    text-align: center;
+    margin: 20px auto;
+    display: inline-block;
+
+}
+
+.player-table{
+    text-align: center;
+    margin: 20px auto;
+    display: inline-block;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin: 20px 0px;
+    padding: 10px 20px;
+}
+
+#players{
+    width: 100%;
+}
 
 
 
